@@ -1,3 +1,8 @@
+2007-03-13  Alexandre Oliva  <aoliva@redhat.com>
+
+	* repo.c (init_repo): Initialize random_seed saved options.
+	(finish_repo): Adjust.
+
 2007-04-03  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/30847
