@@ -1,3 +1,11 @@
+2007-03-13  Alexandre Oliva  <aoliva@redhat.com>
+
+	* flags.h (flag_random_seed): Remove declaration, in favor of...
+	* toplev.h (get_random_seed, set_random_seed): ... these.
+	* tree.c (get_file_function_name): Use the former.
+	* opts.c (common_handle_option): Use the latter.
+	* toplev.c
+
 2007-02-15  Alexandre Oliva  <aoliva@redhat.com>
 
 	* dwarf2out.c (dwarf2out_finish): Accept namespaces as context of
